Fix select element overflowing parent container

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -243,6 +243,7 @@ select {
   background: $color-warm;
   color: $color-black;
   border-radius: $border-radius-std;
+  max-width: 100%;
 }
 
 label {
